--- a/c_login_register.css
+++ b/c_login_register.css
@@ -11,11 +11,13 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: black;
+    background:url("splash_background.jpg");
+    background-size: 100% 100%;
     z-index: 200;
     color: black;
     text-align: center;
     line-height: 90vh;
+    overflow: hidden;
 }
 
 .splash.display-none{
@@ -30,14 +32,15 @@
     color: black;
     text-align: center;
     line-height: 90vh;
-    transition: all 1s;
+    transition: all 2s;
+    overflow: hidden;
 }
 
 .fade-in{
     margin-top: 15%;
-    height: 350px;
-    width: 550px;
-    opacity: 0;
+    height: 450px;
+    width: 700px;
+    opacity: 0.1;
     animation: fadeIn 1s ease-in forwards;
 }
 
@@ -54,7 +57,7 @@ body{
     overflow-x: hidden;
     overflow-y: hidden;
     animation-name: removescroll;
-    animation-duration: 8s;
+    animation-duration: 15s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
@@ -73,6 +76,7 @@ body{
 
 body{
     background-color: black;
+    overflow: hidden;
 }
 
 .form_box{
